Retrocompatibilidad en proyecto `server`